--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,13 +11,13 @@
         android:layout_height="150dp"
         android:src="@drawable/baseline_phone_iphone_24"/>
     <TextView
+        android:id="@+id/txt_product"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="14sp"
         android:layout_marginVertical="8dp"
         android:text="Samsung M22"/>
     <Button
-
         android:id="@+id/btn_buy"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
